# packet-visualizer

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/: README.md  pyproject.toml
backend/packet_sniffer/: consts.py  models.py  redis_client.py  server.py
frontend/: home.html
packet_sniffer/: __main__.py  consts.py  main.py  models.py  parser.py  redis_client.py  resolver.py  server.py  sniffer.py  utils.py
packet_sniffer/utils/: logger.py  network.py
