[project]
name = "packet-sniffer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "pyshark>=0.6",
    "redis>=6.4.0",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pylint>=3.3.8",
    "ruff>=0.13.0",
]
